# pyprefab

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/: dependabot.yaml
.github/workflows/: ci.yaml  publish-docs.yaml  publish-pypi-test.yaml  publish-pypi-test.yml  publish-pypi.yaml  publish-pypi.yml
docs/source/: conf.py  index.rst  usage.md
docs/source/_static/: custom.css
src/pyprefab/: __init__.py  __main__.py  cli.py  logging.py
src/pyprefab/templates/: .gitignore.j2  .pre-commit-config.yaml.j2  CHANGELOG.md.j2  CONTRIBUTING.md.j2  README.md.j2  pyproject.toml.j2
src/pyprefab/templates/.github/workflows/: ci.yaml.j2  publish-pypi-test.yaml.j2  publish-pypi.yaml.j2
src/pyprefab/templates/docs/source/: conf.py.j2  index.rst.j2  usage.md.j2
src/pyprefab/templates/src/{{ project_name }}/: __init__.py.j2  __main__.py.j2  app.py.j2  logging.py.j2
src/pyprefab/templates/test/: test_app.py
test/: conftest.py  test_cli.py  test_prefab_app.py  test_pyprefab.py  test_templates.py
test/__snapshots__/: test_templates.ambr
