[project]
name = 'pyprefab'
description = 'Python application template for personal use'
license = {text = 'MIT License'}
readme = 'README.md'
requires-python = '>=3.9'
classifiers = [
    'Programming Language :: Python :: 3',
    'License :: OSI Approved :: MIT License',
]
dynamic = ['version']

dependencies = [
    'structlog',
    'rich',
    "typer",
    "jinja2>=3.1.5",
]

[dependency-groups]
dev = [
    'coverage',
    'freezegun',
    'mypy',
    'pre-commit',
    'pytest',
    "pytest-random-order>=1.1.1",
    'ruff',
]

[project.scripts]
pyprefab = "pyprefab.cli:app"

[project.urls]
Repository = "https://github.com/bsweger/pyprefab.git"

[build-system]
# Minimum requirements for the build system to execute.
requires = ['setuptools>=45', 'wheel', "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
namespaces = true
where = ["src"]

[tool.setuptools.package-data]
"pyprojgen.templates" = ["*.j2", "*.jinja2", "*"]

[tool.setuptools_scm]
local_scheme = "no-local-version"

[tool.pyprefab]
# to write json-formatted logs to disk, uncomment the following line specify the file location
# log_file = '/path/to/logs/files/pyprefab.log'

[tool.pytest.ini_options]
addopts = "--random-order"
tmp_path_retention_policy = "none"
testpaths = [
    "test",
]

[tool.ruff]
line-length = 120
lint.extend-select = ['I', 'Q']

[tool.ruff.lint.flake8-quotes]
inline-quotes = 'single'

[tool.ruff.format]
quote-style = 'single'

[tool.uv]
# ensure setuptools_scm generates a version number that reflects latest tags
# https://docs.astral.sh/uv/concepts/cache/#dynamic-metadata
cache-keys = [{ git = { commit = true, tags = true } }]

